--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,51 @@ body {
 }
 body #header {
   background: #F6F6F7;
-  padding-top: 0.3em;
-  padding-bottom: 0.3em;
   margin-top: 1em;
   margin-bottom: 1em;
   font-size: 0.95em;
   text-align: center;
+}
+body #header #dropdown-container {
+  cursor: pointer;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+}
+body #header #dropdown-container .dropdown-menu {
+  border-color: #CCC;
+  border-radius: 0;
+  border-top: 0;
+  padding: 1em;
+  width: 17em;
+}
+body #header #dropdown-container .dropdown-menu #border-top {
+  border-top: solid 1px #CCC;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 30%;
+}
+body #header #dropdown-container .dropdown-menu .cart-contents {
+  font-size: 0.85em;
+  color: #222;
+}
+body #header #dropdown-container .dropdown-menu .cart-contents #prodSmall {
+  padding-bottom: 0.5em;
+}
+body #header #dropdown-container .dropdown-menu .cart-contents #prodMedium {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+body #header #dropdown-container .dropdown-menu .cart-contents #prodLarge {
+  padding-top: 0.5em;
+}
+body #header #dropdown-container .dropdown-menu .cart-contents .cart-details {
+  margin-bottom: 1.5em;
+}
+body #header .active-cart {
+  background: #fff;
+  border: solid 1px #CCC;
+  border-bottom: 0;
 }
 body .prod-details {
   margin-top: 2.5em;
@@ -31,6 +70,9 @@ body .prod-details h3 {
 }
 body .prod-details h3 .required-star {
   color: #C90000;
+}
+body .prod-details h3 #selectSize {
+  color: #222;
 }
 body .prod-details .prod-image {
   width: 90%;
@@ -59,7 +101,7 @@ body .prod-details .add-to-cart {
   border: solid #222;
   margin-left: 1.2em;
   color: #222;
-  animation: 500ms ease-in-out;
+  transition: 200ms ease-in-out;
   cursor: pointer;
 }
 body .prod-details .add-to-cart h4 {
@@ -70,6 +112,7 @@ body .prod-details .add-to-cart h4 {
 body .prod-details .add-to-cart:hover {
   background: #222;
   color: #fff;
+  transition: 200ms ease-in-out;
 }
 body .prod-details .active-size {
   border: solid 2px #222;
